--- a/OPPO.html
+++ b/OPPO.html
@@ -209,7 +209,7 @@
   <!-- WhatsApp -->
   <div class="flex items-center gap-3 p-4 hover:bg-gray-50 cursor-pointer">
     <div class="w-10 h-10 bg-green-100 flex items-center justify-center rounded-full">
-      🟢
+      <i class="fa-brands fa-whatsapp"></i>
     </div>
     <p class="font-medium text-gray-800">WhatsApp</p>
   </div>
