--- a/allads.html
+++ b/allads.html
@@ -175,7 +175,7 @@
                      px-4 sm:px-5 py-2 
                      rounded-full text-[13px] sm:text-[14px] 
                      bg-white text-gray-600">
-        All of Bangladesh
+        <a href="/All-bangladesh.html"> All of Bangladesh</a>
         <i class="fa-solid fa-chevron-down text-[11px]"></i>
       </button>
 
@@ -185,7 +185,7 @@
                      px-4 sm:px-5 py-2 
                      rounded-full text-[13px] sm:text-[14px] 
                      bg-white text-gray-600">
-        Category
+       <a href="/Category.html"> Category</a>
         <i class="fa-solid fa-chevron-down text-[11px]"></i>
       </button>
 
@@ -195,7 +195,7 @@
                      px-4 sm:px-5 py-2 
                      rounded-full text-[13px] sm:text-[14px] 
                      bg-white text-gray-600">
-        Type of poster
+        <a href="/Type-of-poster.html">Type of poster</a>
         <i class="fa-solid fa-chevron-down text-[11px]"></i>
       </button>
 
@@ -205,8 +205,8 @@
                      px-4 sm:px-5 py-2 
                      rounded-full text-[13px] sm:text-[14px] 
                      bg-white text-gray-600">
-        Promoted Listings
-        <i class="fa-solid fa-chevron-down text-[11px]"></i>
+<a href="/Promoted-Listings.html">        Promoted Listings
+</a>        <i class="fa-solid fa-chevron-down text-[11px]"></i>
       </button>
 
       <!-- Sort by -->
@@ -215,7 +215,7 @@
                      px-4 sm:px-5 py-2 
                      rounded-full text-[13px] sm:text-[14px] 
                      bg-white text-gray-600">
-        Sort by
+       <a href="/Sor- by.html"> Sort by</a>
         <i class="fa-solid fa-chevron-down text-[11px]"></i>
       </button>
 
