--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
       rel="stylesheet" />
-
   </head>
 
   <body class="bg-[#ffffff]">
@@ -20,60 +19,64 @@
 
     <div class="bg-[#149777] text-white pb-10">
       <!-- Navbar -->
-    <div class="bg-[#149777] text-white">
-      <div
-        class="max-w-6xl mx-auto px-4 py-3 flex justify-between items-center">
-        <!-- LEFT SIDE -->
-        <div class="flex items-center gap-4 sm:gap-6">
-          <!-- Logo -->
-          <div class="flex items-center gap-2">
-            <img
-              class="w-10 h-10 sm:w-14 sm:h-14 object-contain"
-              src="/img/images.jpg"
-              alt="logo" />
-            <span class="text-xl sm:text-3xl font-bold leading-none">
-              <a href="/">Bikroy</a>
-            </span>
+      <div class="bg-[#149777] text-white">
+        <div
+          class="max-w-6xl mx-auto px-4 py-3 flex justify-between items-center">
+          <!-- LEFT SIDE -->
+          <div class="flex items-center gap-4 sm:gap-6">
+            <!-- Logo -->
+            <div class="flex items-center gap-2">
+              <img
+                class="w-10 h-10 sm:w-14 sm:h-14 object-contain"
+                src="/img/images.jpg"
+                alt="logo" />
+              <span class="text-xl sm:text-3xl font-bold leading-none">
+                <a href="/">Bikroy</a>
+              </span>
+            </div>
+
+            <!-- All Ads + Language (Hidden on Mobile) -->
+            <div class="hidden md:flex items-center gap-3">
+              <a
+                href="./allads.html"
+                class="text-sm font-medium hover:underline">
+                All ads
+              </a>
+
+              <span class="text-sm px-3 py-1 rounded border border-[#0f766e]">
+                বাংলা
+              </span>
+            </div>
           </div>
 
-          <!-- All Ads + Language (Hidden on Mobile) -->
-          <div class="hidden md:flex items-center gap-3">
-            <a href="./allads.html" class="text-sm font-medium hover:underline">
-              All ads
-            </a>
+          <!-- RIGHT SIDE -->
+          <div class="flex items-center gap-3 sm:gap-6">
+            <!-- Desktop Menu -->
+            <div class="hidden md:flex items-center gap-6">
+              <a href="#" class="flex items-center gap-1 hover:opacity-80">
+                <i class="fa-regular fa-comments"></i> Chat
+              </a>
 
-            <span class="text-sm px-3 py-1 rounded border border-[#0f766e]">
-              বাংলা
-            </span>
+              <a href="#" class="flex items-center gap-1 hover:opacity-80">
+                <i class="fa-regular fa-user"></i> Account
+              </a>
+            </div>
+
+            <!-- Post Button -->
+            <a href="/POST-FREE-AD.html">
+              <button
+                class="bg-[#ffc800] text-black text-sm sm:text-base font-semibold px-3 sm:px-4 py-2 rounded hover:bg-yellow-400 transition">
+                POST FREE AD
+              </button></a
+            >
+
+            <!-- Hamburger (Mobile Only) -->
+            <button class="md:hidden text-2xl">
+              <i class="fa-solid fa-bars"></i>
+            </button>
           </div>
-        </div>
-
-        <!-- RIGHT SIDE -->
-        <div class="flex items-center gap-3 sm:gap-6">
-          <!-- Desktop Menu -->
-          <div class="hidden md:flex items-center gap-6">
-            <a href="#" class="flex items-center gap-1 hover:opacity-80">
-              <i class="fa-regular fa-comments"></i> Chat
-            </a>
-
-            <a href="#" class="flex items-center gap-1 hover:opacity-80">
-              <i class="fa-regular fa-user"></i> Account
-            </a>
-          </div>
-
-          <!-- Post Button -->
-          <a href="/POST-FREE-AD.html"> <button
-            class="bg-[#ffc800] text-black text-sm sm:text-base font-semibold px-3 sm:px-4 py-2 rounded hover:bg-yellow-400 transition">
-            POST FREE AD
-          </button></a>
-
-          <!-- Hamburger (Mobile Only) -->
-          <button class="md:hidden text-2xl">
-            <i class="fa-solid fa-bars"></i>
-          </button>
         </div>
       </div>
-    </div>
 
       <!-- Location -->
       <div class="text-center mt-6">
@@ -97,6 +100,53 @@
             class="bg-yellow-400 w-16 h-16 flex items-center justify-center rounded-full mr-2">
             <i class="fa-solid fa-magnifying-glass text-xl text-black"></i>
           </button>
+        </div>
+      </div>
+    </div>
+    <div class="flex justify-center items-start p-4">
+      <div class="w-full max-w-2xl relative">
+        <!-- Search Input -->
+        <div class="relative">
+          <input
+            type="text"
+            placeholder="book"
+            class="w-full pl-10 pr-4 py-3 rounded-xl border border-gray-300 focus:outline-none focus:ring-2 focus:ring-teal-500 shadow-sm" />
+
+          <!-- Search Icon -->
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="w-5 h-5 text-gray-400 absolute left-3 top-1/2 -translate-y-1/2"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke="currentColor">
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="M21 21l-4.35-4.35M11 19a8 8 0 100-16 8 8 0 000 16z" />
+          </svg>
+        </div>
+
+        <!-- Dropdown -->
+        <div
+          class="absolute w-full mt-2 bg-white rounded-xl shadow-lg border border-gray-200 overflow-hidden">
+          <div class="px-4 py-3 hover:bg-gray-50 cursor-pointer">
+            <span class="font-semibold text-gray-900">Book</span>
+            <span class="text-gray-500"> Keeper in </span>
+            <span class="text-blue-600">Accountant</span>
+          </div>
+
+          <div class="px-4 py-3 hover:bg-gray-50 cursor-pointer">
+            <span class="font-semibold text-gray-900">Book</span>
+            <span class="text-gray-500">cases & Shelves in </span>
+            <span class="text-blue-600">Living Room Furniture</span>
+          </div>
+
+          <div class="px-4 py-3 hover:bg-gray-50 cursor-pointer">
+            <span class="font-semibold text-gray-900">Books</span>
+            <span class="text-gray-500"> & Novels in </span>
+            <span class="text-blue-600">Music, Books & Movies</span>
+          </div>
         </div>
       </div>
     </div>
